--- a/project_V2_main/index.html
+++ b/project_V2_main/index.html
@@ -27,13 +27,17 @@
         </div>
     </header>
     <section>
-        <article>
+        <article class="board_container">
             <div class="cyy_img_container">
                 <img src="image\image\그림1.jpg" alt="" >
                 <img src="image\image\240_F_497152642_F0AgZhKLS6OLnvV5zDrF9TU4SjDegMzH.jpg" alt="">
                 <img src="image\image\image_1645025486091_1000.jpg" alt="">
             </div>
-            
+        </article>
+        <article class="map_container">
+            <div class = "map">
+                <img src="image\map\전국지도.png" usemap="#image-map">
+            </div>
         </article>
         
     </section>
@@ -43,5 +47,7 @@
     <footer>
 
     </footer>
+
+
 </body>
 </html>
