--- a/project_V1/index.html
+++ b/project_V1/index.html
@@ -28,7 +28,7 @@
         position: absolute;
       }
       .parts_map img {
-        opacity: 0.1;
+        opacity: 0.3;
       }
       .parts_map a:hover {
         opacity: 1;
@@ -59,6 +59,10 @@
         top: 20px;
         left: 20px;
       }
+      .gj {
+        top: 374px;
+        left: 101px;
+      }
     </style>
   </head>
   <body>
@@ -73,7 +77,7 @@
         <a class="jb_btn btn" href="https://naver.com">전북</a>
       </div>
       <div class="parts_map gj">
-        <img src="image\map\광주.png" width="43px" />
+        <img src="image\map\광주.png" width="42px" />
         <a class="gj_btn btn" href="https://naver.com">광주</a>
       </div>
     </div>
