--- a/project_V3_main/index.html
+++ b/project_V3_main/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="main_section" />
     <link rel="stylesheet" href="main_map.css" />
     <title>여행발자국</title>
   </head>
@@ -28,48 +29,38 @@
       </div>
     </header>
     <section>
-      <article class="board_container">
-        <img src="image\image\그림1.jpg" alt="" />
-        <img
-          src="image\image\240_F_497152642_F0AgZhKLS6OLnvV5zDrF9TU4SjDegMzH.jpg"
-          alt=""
-        />
-        <img src="image\image\image_1645025486091_1000.jpg" alt="" />
-      </article>
       <article class="map_container">
-        <div class="whole_map">
-          <img src="image\map\전국지도.png" usemap="#image-map" />
-          <div class="jn_map">
-            <a class="jn_map" href="#none">전라남도</a>
-            <img class="jn_map" src="image\map\전라남도.png" alt="" />
-          </div>
-          <div class="gj_map">
-            <img src="image\map\광주.png" alt="" />
-          </div>
-          <div class="jb_map">
-            <img src="image\map\전라북도.png" alt="" />
-          </div>
-          <div class="cn_map">
-            <img src="image\map\충청남도.png" alt="" />
-          </div>
-          <div class="cb_map">
-            <img src="image\map\충청북도.png" alt="" />
-          </div>
-          <div class="gn_map">
-            <img src="image\map\경상남도.png" alt="" />
-          </div>
-          <div class="gb_map">
-            <img src="image\map\경상북도.png" alt="" />
-          </div>
-          <div class="bs_map">
-            <img src="image\map\부산.png" alt="" />
-          </div>
-          <div class="us_map">
-            <img src="image\map\울산.png" alt="" />
-          </div>
-          <div class="us_map">
-            <img src="image\map\울산.png" alt="" />
-          </div>
+        <img src="image\map\전국지도.png" usemap="#image-map" />
+        <div class="jn_map">
+          <a class="jn_map" href="#none">전라남도</a>
+          <img class="jn_map" src="image\map\전라남도.png" alt="" />
+        </div>
+        <div class="gj_map">
+          <img src="image\map\광주.png" alt="" />
+        </div>
+        <div class="jb_map">
+          <img src="image\map\전라북도.png" alt="" />
+        </div>
+        <div class="cn_map">
+          <img src="image\map\충청남도.png" alt="" />
+        </div>
+        <div class="cb_map">
+          <img src="image\map\충청북도.png" alt="" />
+        </div>
+        <div class="gn_map">
+          <img src="image\map\경상남도.png" alt="" />
+        </div>
+        <div class="gb_map">
+          <img src="image\map\경상북도.png" alt="" />
+        </div>
+        <div class="bs_map">
+          <img src="image\map\부산.png" alt="" />
+        </div>
+        <div class="us_map">
+          <img src="image\map\울산.png" alt="" />
+        </div>
+        <div class="us_map">
+          <img src="image\map\울산.png" alt="" />
         </div>
       </article>
     </section>
