--- a/project_V4_main/index.html
+++ b/project_V4_main/index.html
@@ -20,7 +20,6 @@
         </label>
         <nav class="cyy_nav">
           <a href="#none" data-link="마이페이지"></a>
-          <a href="#none" data-link="환경설정"></a>
           <a href="#none" data-link="개발자 소개"></a>
           <a href="#none" data-link="로그인"></a>
           <a href="#none" data-link="HOME"></a>
@@ -32,7 +31,8 @@
         <img src="image\map\전국지도.png" usemap="#image-map" />
       </article>
     </section>
-    <aside></aside>
-    <footer></footer>
+    <footer>
+      <p>CopyRight &copy; dbsdudsw@icloud.com</p>
+    </footer>
   </body>
 </html>
