--- a/project_V5_main/index.html
+++ b/project_V5_main/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="main_map.css" />
+    <script src="js/main.js"></script>
     <title>여행발자국</title>
   </head>
   <body>
@@ -27,8 +28,17 @@
       </div>
     </header>
     <section>
-      <article class="map_container">
-        <img src="image\map\전국지도.png" usemap="#image-map" />
+      <article class="main_first_section">
+        <div class="main_intro">여행 발자국 웹 페이지 입니다.</div>
+        <div class="main_to_map">
+          <img src="\project_V5_main\image\icon\down-arrow.png" alt="" />
+        </div>
+      </article>
+      <article class="main_map_container">
+        <div class="main_map_img">
+          <img src="\project_V5_main\image\map\전국지도.png" alt="" />
+        </div>
+        <div></div>
       </article>
     </section>
     <footer>
