--- a/project_V6_main/index.html
+++ b/project_V6_main/index.html
@@ -31,7 +31,7 @@
       <article class="main_first_section">
         <div class="main_intro">여행 발자국 웹 페이지 입니다.</div>
         <div class="main_to_map">
-          <img src="\image\icon\down-arrow.png" alt="" />
+          <img src=".\image\icon\down-arrow.png" alt="" />
         </div>
       </article>
       <article class="main_map_container">
