--- a/project_V6_main/index.html
+++ b/project_V6_main/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="main_map.css" />
-    <script src="js/main.js"></script>
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./main_map.css" />
+    <script src="./js/main.js"></script>
     <title>여행발자국</title>
   </head>
   <body>
