--- a/project_V6_main/index.html
+++ b/project_V6_main/index.html
@@ -74,7 +74,7 @@
           <label for="tab2"></label>
           <label for="tab3"></label>
         </div>
-        <map name="image-map">
+        <map name="image-map" id="image-map">
           <area
             href="#gj_map"
             target=""
