--- a/project_V8_sns/index.html
+++ b/project_V8_sns/index.html
@@ -52,7 +52,22 @@
             <div class="sns_post_comment"></div>
             <div class="sns_post_share"></div>
           </div>
-          <div class="sns_post"></div>
+          <div class="sns_post">
+            <div class="sns_post_pic">
+              <img src="./image/image/background_img.jpg" alt="" />
+            </div>
+            <div class="sns_post_profile">
+              <img src="./image/image/image_1645025486091_1000.jpg" alt="" />
+            </div>
+            <div class="sns_post_title">
+              <h1>맛있는 수박</h1>
+            </div>
+            <div class="sns_post_time"></div>
+            <div class="sns_post_time"></div>
+            <div class="sns_post_heart"></div>
+            <div class="sns_post_comment"></div>
+            <div class="sns_post_share"></div>
+          </div>
           <div class="sns_post"></div>
           <div class="sns_post"></div>
           <div class="sns_post"></div>
@@ -63,9 +78,15 @@
     <footer>
       <p>CopyRight &copy; dbsdudsw@icloud.com</p>
     </footer>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=37962b2a8c893984a4d2139de5dc0061"
+    >
+      const container = document.getElementById('.sns_map'); //지도를 담을 영역의 DOM 레퍼런스
+      let options = { //지도를 생성할 때 필요한 기본 옵션
+      	center: new kakao.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
+      	level: 3 //지도의 레벨(확대, 축소 정도)
+      };
+    </script>
   </body>
-  <script>
-    const gj_map = document.querySelector('map area[target="gj_map"] ');
-    const items = document.querySelector(".items");
-  </script>
 </html>
