--- a/기본페이지/index.html
+++ b/기본페이지/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="main_map.css" />
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./sns.css" />
     <title>여행발자국</title>
   </head>
   <body>
     <header>
-      <img src="image\footprint\발자국_simple.png" alt="" />
+      <img src="./image/footprint/발자국_simple.png" alt="" />
       <div class="cyy_ham_container">
         <input type="checkbox" id="cyy_ham_trigger" />
         <label for="cyy_ham_trigger">
@@ -27,9 +27,7 @@
       </div>
     </header>
     <section>
-      <article class="map_container">
-        <img src="image\map\전국지도.png" usemap="#image-map" />
-      </article>
+      <article></article>
     </section>
     <footer>
       <p>CopyRight &copy; dbsdudsw@icloud.com</p>
