--- a/project_V6_main/index.html
+++ b/project_V6_main/index.html
@@ -43,8 +43,8 @@
             <div class="map_whole_img main_item">
               <div class="map_container">
                 <img src=".\image\map\전국지도.png" usemap="#image-map" />
-                <img src=".\image\map\전라남도.png" alt="" id="map_jn" />
-                <img src=".\image\map\광주.png" alt="" id="map_gj" />
+                <img src="./image/map/전라남도_흑백.png" alt="" id="map_jn" />
+                <img src="./image/map/광주_1.png" alt="" id="map_gj" />
                 <img src=".\image\map\전라북도.png" alt="" id="map_jb" />
                 <img src=".\image\map\충청남도.png" alt="" id="map_cn" />
                 <img src=".\image\map\대전.png" alt="" id="map_dj" />
