--- a/project_V8_sns/index.html
+++ b/project_V8_sns/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./sns.css" />
+    <script src="./js/main.js"></script>
     <title>여행발자국</title>
   </head>
   <body>
@@ -34,7 +35,11 @@
         </ul>
       </article>
       <article class="sns_container">
-        <div class="sns_map" width="580px"></div>
+        <div class="sns_map" id="sns_api_map" width="580px"></div>
+        <script
+          type="text/javascript"
+          src="//dapi.kakao.com/v2/maps/sdk.js?appkey=37962b2a8c893984a4d2139de5dc0061"
+        ></script>
         <div class="sns_contents">
           <div class="sns_post">
             <div class="sns_post_pic">
@@ -46,7 +51,6 @@
             <div class="sns_post_title">
               <h1>맛있는 수박</h1>
             </div>
-            <div class="sns_post_time"></div>
             <div class="sns_post_time"></div>
             <div class="sns_post_heart"></div>
             <div class="sns_post_comment"></div>
@@ -78,16 +82,5 @@
     <footer>
       <p>CopyRight &copy; dbsdudsw@icloud.com</p>
     </footer>
-    <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=37962b2a8c893984a4d2139de5dc0061"
-    >
-      const container = document.getElementById('.sns_map'); //지도를 담을 영역의 DOM 레퍼런스
-      let options = { //지도를 생성할 때 필요한 기본 옵션
-      	center: new kakao.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
-      	level: 3 //지도의 레벨(확대, 축소 정도)
-      };
-      var map = new kakao.maps.Map(container, options);
-    </script>
   </body>
 </html>
