--- a/project_V8_sns/index.html
+++ b/project_V8_sns/index.html
@@ -82,5 +82,6 @@
     <footer>
       <p>CopyRight &copy; dbsdudsw@icloud.com</p>
     </footer>
+    <script src="./js/map.js"></script>
   </body>
 </html>
