--- a/project_V7_API/index.html
+++ b/project_V7_API/index.html
@@ -47,7 +47,7 @@
     <footer>
       <p>CopyRight &copy; dbsdudsw@icloud.com</p>
     </footer>
-    <script src="./data/gj_map_data.json" type="text/javascript""></script>
+    <script src="./data/gj_map_data.txt" type="text/javascript"></script>
     <script src="./js/map.js"></script>
   </body>
 </html>
