--- a/project_V8_sns/index.html
+++ b/project_V8_sns/index.html
@@ -35,11 +35,12 @@
         </ul>
       </article>
       <article class="sns_container">
-        <div class="sns_map" id="sns_api_map" width="580px"></div>
-        <script
-          type="text/javascript"
-          src="//dapi.kakao.com/v2/maps/sdk.js?appkey=37962b2a8c893984a4d2139de5dc0061"
-        ></script>
+        <div class="sns_map" id="sns_api_map" width="580px">
+          <script
+            type="text/javascript"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=37962b2a8c893984a4d2139de5dc0061"
+          ></script>
+        </div>
         <div class="sns_contents">
           <div class="sns_post">
             <div class="sns_post_pic">
