--- a/project_V8_sns/index.html
+++ b/project_V8_sns/index.html
@@ -82,6 +82,7 @@
     <footer>
       <p>CopyRight &copy; dbsdudsw@icloud.com</p>
     </footer>
+    <script src="./data/gj_map_data.txt" type="text/javascript"></script>
     <script src="./js/map.js"></script>
   </body>
 </html>
