--- a/나누기/sns페이지/sns.html
+++ b/나누기/sns페이지/sns.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/sns.css" />
+    <script src="./js/main.js"></script>
     <title>여행발자국</title>
   </head>
   <body>
