--- a/나누기/글상세페이지/sns_post_detail.html
+++ b/나누기/글상세페이지/sns_post_detail.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/sns.css" />
+    <link rel="stylesheet" href="../css/sns_post_detail.css" />
     <title>여행발자국</title>
   </head>
   <body>
     <header>
-      <img src="image\footprint\발자국_simple.png" alt="" />
+      <img src="../image/logo_footprint.png" alt="" />
       <div class="cyy_ham_container">
         <input type="checkbox" id="cyy_ham_trigger" />
         <label for="cyy_ham_trigger">
@@ -44,40 +45,15 @@
           ></script>
         </div>
         <div class="sns_contents">
-          <div class="sns_post">
-            <div class="sns_post_pic">
-              <img src="../image/그림1.jpg" alt="" />
+          <div class="post_detail_header">title</div>
+          <div id="post_detail_pic_container">
+            <label id="post_img_container"
+              ><img src="../image/img_book_none.png" alt=""
+            /></label>
+            <div id="post_heart_container">
+              <img src="../image/icon_heart.png" width="30px" alt="" />
             </div>
-            <div class="sns_post_profile">
-              <img src="../image/그림1.jpg" alt="" />
-            </div>
-            <div class="sns_post_title">
-              <h1>맛있는 수박</h1>
-            </div>
-            <div class="sns_post_time"></div>
-            <div class="sns_post_heart"></div>
-            <div class="sns_post_comment"></div>
-            <div class="sns_post_share"></div>
           </div>
-          <div class="sns_post">
-            <div class="sns_post_pic">
-              <img src="../image/background_img.jpg" alt="" />
-            </div>
-            <div class="sns_post_profile">
-              <img src="../image/background_img.jpg" alt="" />
-            </div>
-            <div class="sns_post_title">
-              <h1>맛있는 수박</h1>
-            </div>
-            <div class="sns_post_time"></div>
-            <div class="sns_post_heart"></div>
-            <div class="sns_post_comment"></div>
-            <div class="sns_post_share"></div>
-          </div>
-          <div class="sns_post"></div>
-          <div class="sns_post"></div>
-          <div class="sns_post"></div>
-          <div class="sns_post"></div>
         </div>
       </article>
     </section>
