--- a/myPage/code/myPage.html
+++ b/myPage/code/myPage.html
@@ -32,8 +32,24 @@
         <div class="myPageHeader">마이페이지</div>
         <div class="myPageBody">
           <div class="myPageList">
-            <div class="myPageUserProfile">프로필</div>
-            <div class="myPageUserHeart">하트</div>
+            <div class="myPageUserProfile">
+              <div class="mPProfileImg">
+                <img src="../image/img_book_none.png" alt="" />
+              </div>
+              <div class="mPProfileName">가나다라</div>
+            </div>
+            <div class="myPageUserHeart">
+              <div id="MyALLheart">
+                <img src="../image/icon_heart.png" alt="" />
+                <div></div>
+              </div>
+              <div id="MyALLheart">
+                <img src="../image/icon_heart.png" alt="" />
+              </div>
+              <div id="MyALLheart">
+                <img src="../image/icon_heart.png" alt="" />
+              </div>
+            </div>
           </div>
           <div class="myPageContent">
             <div class="myPageSetting"></div>
