--- a/myPage/code/myPage.html
+++ b/myPage/code/myPage.html
@@ -36,24 +36,51 @@
               <div class="mPProfileImg">
                 <img src="../image/img_book_none.png" alt="" />
               </div>
-              <div class="mPProfileName">가나다라</div>
+              <div class="mPProfileName">이름</div>
+              <div class="mPProfileLogout">로그아웃</div>
             </div>
             <div class="myPageUserHeart">
               <div id="MyALLheart">
+                <div class="mPLikeTitle">좋아하는 글</div>
                 <img src="../image/icon_heart.png" alt="" />
-                <div></div>
+                <div class="mPLikeCount"><span>9999</span>개</div>
               </div>
               <div id="MyALLheart">
+                <div class="mPLikeTitle">내가 받은 하트</div>
                 <img src="../image/icon_heart.png" alt="" />
+                <div class="mPLikeCount"><span>9999</span>개</div>
               </div>
               <div id="MyALLheart">
+                <div class="mPLikeTitle">가장많이받은하트</div>
                 <img src="../image/icon_heart.png" alt="" />
+                <div class="mPLikeCount"><span>9999</span>개</div>
               </div>
             </div>
           </div>
           <div class="myPageContent">
-            <div class="myPageSetting"></div>
-            <div class="myPagePost"></div>
+            <div class="myPageSetting">
+              <div class="mPContentTitle">기본페이지</div>
+              <div class="mPContentBox">
+                <div class="mPNicSet">
+                  <div>닉네임 :</div>
+                  <div class="mPNowNic">사료 싫어하는 고양이</div>
+                  <div class="mPNicChange">변경하기</div>
+                </div>
+                <div class="mPPWSet">
+                  <div>비밀번호 변경</div>
+                  <div class="mPPWChange">변경하기</div>
+                </div>
+              </div>
+            </div>
+            <div class="myPagePost">
+              <div class="mPContentTitle">글관리</div>
+              <div class="mPContentBox">
+                <div class="mP">
+                  지금까지 '<span>999</span>'개의 발자국을 남겼어요!
+                </div>
+                <div class="mPPostManage">자세히보기</div>
+              </div>
+            </div>
           </div>
         </div>
       </article>
