--- a/myPage/code/myPage.html
+++ b/myPage/code/myPage.html
@@ -29,12 +29,15 @@
     </header>
     <section>
       <article>
-        <div class="myPageHeader">마이페이지</div>
+        <div class="myPageHeader">
+          <div>마이페이지</div>
+        </div>
         <div class="myPageBody">
           <div class="myPageList">
             <div class="myPageUserProfile">
               <div class="mPProfileImg">
                 <img src="../image/img_book_none.png" alt="" />
+                <div class="mPProfileChange">프로필 사진 변경하기</div>
               </div>
               <div class="mPProfileName">이름</div>
               <div class="mPProfileLogout">로그아웃</div>
@@ -64,22 +67,25 @@
                 <div class="mPNicSet">
                   <div>닉네임 :</div>
                   <div class="mPNowNic">사료 싫어하는 고양이</div>
-                  <div class="mPNicChange">변경하기</div>
+                  <div class="mPNicChange mPBtn">변경하기</div>
                 </div>
                 <div class="mPPWSet">
                   <div>비밀번호 변경</div>
-                  <div class="mPPWChange">변경하기</div>
+                  <div class="mPPWChange mPBtn">변경하기</div>
                 </div>
               </div>
             </div>
             <div class="myPagePost">
               <div class="mPContentTitle">글관리</div>
-              <div class="mPContentBox">
-                <div class="mP">
+              <div class="mPContentBox" id="mpPostListBox">
+                <div class="mPPostCount">
                   지금까지 '<span>999</span>'개의 발자국을 남겼어요!
                 </div>
-                <div class="mPPostManage">자세히보기</div>
+                <div class="mPPostManage mPBtn">글 관리하기</div>
               </div>
+            </div>
+            <div class="myPageImgContainer">
+              <img src="../image/자전거.png" alt="" />
             </div>
           </div>
         </div>
