--- a/정리/새 폴더/마이페이지/myPage.html
+++ b/정리/새 폴더/마이페이지/myPage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/mypage/myPage.css" />
+    <link rel="stylesheet" href="../css/mypage/myPageModal.css" />
     <script src="../js/main.js"></script>
     <title>여행발자국</title>
   </head>
@@ -37,7 +38,10 @@
           <div class="myPageList">
             <div class="myPageUserProfile">
               <div class="mPProfileImg">
-                <img src="../image/img_book_none.png" alt="" />
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQDEJ9uT3a8ZN65Mek-wN7xzJxnNJzDwwqYlXpEZOuZQ&s"
+                  alt=""
+                />
                 <div class="mPProfileChange">프로필 사진 변경하기</div>
               </div>
               <div class="mPProfileName">이름</div>
@@ -47,17 +51,23 @@
               <div id="MyALLheart">
                 <div class="mPLikeTitle">좋아하는 글</div>
                 <img src="../image/icon_heart.png" alt="" />
-                <div class="mPLikeCount"><span>9999</span>개</div>
+                <div class="mPLikeCount">
+                  <span id="mPFavoriteLike ">9999</span>개
+                </div>
               </div>
               <div id="MyALLheart">
                 <div class="mPLikeTitle">내가 받은 하트</div>
                 <img src="../image/icon_heart.png" alt="" />
-                <div class="mPLikeCount"><span>9999</span>개</div>
+                <div class="mPLikeCount">
+                  <span id="mPReceivedLike">9999</span>개
+                </div>
               </div>
               <div id="MyALLheart">
                 <div class="mPLikeTitle">가장많이받은하트</div>
                 <img src="../image/icon_heart.png" alt="" />
-                <div class="mPLikeCount"><span>9999</span>개</div>
+                <div class="mPLikeCount">
+                  <span id="mPMostHeart">9999</span>개
+                </div>
               </div>
             </div>
           </div>
@@ -67,7 +77,7 @@
               <div class="mPContentBox">
                 <div class="mPNicSet">
                   <div>닉네임 :</div>
-                  <div class="mPNowNic">사료 싫어하는 고양이</div>
+                  <label class="mPNowNic">사료 싫어하는 고양이</label>
                   <div class="mPNicChange mPBtn">변경하기</div>
                 </div>
                 <div class="mPPWSet">
@@ -77,16 +87,33 @@
               </div>
             </div>
             <div class="myPagePost">
-              <div class="mPContentTitle">글관리</div>
+              <div class="mPContentTitle">발자국 관리</div>
               <div class="mPContentBox" id="mpPostListBox">
                 <div class="mPPostCount">
-                  지금까지 '<span>999</span>'개의 발자국을 남겼어요!
+                  지금까지 '<span id="mPPostNumber">999</span>'개의 발자국을
+                  남겼어요!
                 </div>
-                <div class="mPPostManage mPBtn">글 관리하기</div>
+                <div class="mPPostManage mPBtn">발자국 관리하기</div>
               </div>
             </div>
             <div class="myPageImgContainer">
               <img src="../image/자전거.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div id="modal" class="modal-overlay">
+          <div class="modal-window">
+            <div class="my_modal_header">
+              <div class="my_modal_title">
+                <h2>닉네임 변경</h2>
+              </div>
+              <div class="my_modal_close_area">X</div>
+            </div>
+            <div class="my_modal_content">
+              <form action="">
+                <input name="myChangeValue" type="text" />
+                <button id="my_modal_change_btn">변경하기</button>
+              </form>
             </div>
           </div>
         </div>
@@ -96,5 +123,6 @@
       <p>CopyRight &copy; dbsdudsw@icloud.com</p>
     </footer>
     <script src="../js/mypage/myPage.js"></script>
+    <script src="../js/mypage/myPageModal.js"></script>
   </body>
 </html>
