--- a/_____________login/login.html
+++ b/_____________login/login.html
@@ -57,28 +57,34 @@
   <!--모달시작 -->
   <div class="modal">
     <div class="modal_body">
-      <div class="modal_body_text">발자국 찾기</div>
+      <div class="modal_header">
+        <div class="modal_title">발자국 찾기</div>
 
-      <form action="" class="modal_body_email">
-        <div>
-          <label for=""></label>
-          <input type="text" />
-        </div>
-        <div>
-          <label for=""></label>
-          <input type="text" />
-        </div>
-        <div>
-          <label for=""></label>
-          <input type="text" />
-        </div>
-        <div>
-          <label for=""></label>
-          <input type="text" />
-        </div>
+        <div class="modal_X">닫기</div>
+      </div>
 
-        <button class="modal_btn save_btn">저장</button>
-        <button class="modal_btn close_btn">닫기</button>
+      <form action="" class="modal_form">
+        <div class="modal_form_input">
+          <div class="modal_form_title">id</div>
+          <label for="modal_input_01"></label>
+          <input type="text" id="modal_input_01" />
+        </div>
+        <div class="modal_form_input">
+          <label for="modal_input_02"></label>
+          <input type="text" id="modal_input_02" />
+        </div>
+        <div class="modal_form_input">
+          <label for="modal_input_02"></label>
+          <input type="text" id="modal_input_02" />
+        </div>
+        <div class="modal_form_input">
+          <label for="modal_input_02"></label>
+          <input type="text" id="modal_input_02" />
+        </div>
+        <div class="modal_form_btn">
+          <button class="modal_btn save_btn">저장</button>
+          <button class="modal_btn close_btn">닫기</button>
+        </div>
       </form>
     </div>
   </div>
