--- a/V2/index.html
+++ b/V2/index.html
@@ -93,12 +93,18 @@
         <map name="image-map" id="image-map">
           <area
             href="#gj_map"
+            id="gj"
             target=""
             alt="gj_map"
             title="gj_map"
             coords="223,622,192,617,177,623,172,641,194,653,219,655,233,646,238,632"
             shape="poly"
             href="#none"
+            class="c1"
+            onmouseover="(event.relatedTarget||event.toElement).className='c1'"
+            ;
+            onmouseout="(event.relatedTarget||event.toElement).className=''"
+            ;
           />
           <area
             target=""
