--- a/정리/새 폴더/API맵페이지/API_map.html
+++ b/정리/새 폴더/API맵페이지/API_map.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/map/API.css" />
-    <link rel="stylesheet" href="../css/map/API_map.css" />
-    <script src="../data/center.js"></script>
-    <script src="../js/main.js"></script>
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./API.css" />
+    <link rel="stylesheet" href="./API_map.css" />
+    <script src="./center.js"></script>
+    <script src="./main.js"></script>
 
     <title>여행발자국</title>
   </head>
@@ -48,26 +48,29 @@
       <!-- <article class="API_course">
         <div class="API_course_create">여행코스 생성</div>
       </article> -->
-    </section>
-    <div class="right_list">
-      <label for="" class="titleLable"></label>
-      <div class="sns_box">
-        <div class="sns_img">
-          <img class="img" src="../image/image/그림1.jpg" alt="" />
+      <article>
+        <div class="right_list">
+          <label for="" class="titleLable"></label>
+          <div class="sns_box">
+            <div class="sns_img">
+              <img class="img" src="../image/image/그림1.jpg" alt="" />
+            </div>
+            <div class="sns_title"><h2>test</h2></div>
+          </div>
         </div>
-        <div class="sns_title"><h2>test</h2></div>
-      </div>
-    </div>
-    <div class="right_write">글쓰기</div>
+        <div class="right_write">글쓰기</div>
+      </article>
+    </section>
+
     <footer>
       <p>CopyRight &copy; dbsdudsw@icloud.com</p>
     </footer>
-    <script src="../js/map/API_main.js"></script>
-    <script src="../data/marker_data.txt" type="text/javascript"></script>
+    <script src="./API_main.js"></script>
+    <script src="./marker_data.txt" type="text/javascript"></script>
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=37962b2a8c893984a4d2139de5dc0061"
     ></script>
-    <script src="../js/map/API_map.js"></script>
+    <script src="./API_map.js"></script>
   </body>
 </html>
